<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Activities.AddCustomer">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#21020a51">
        <android.support.v7.widget.Toolbar
            android:id="@+id/customer_details_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"
            app:titleTextColor="@android:color/white"
            app:titleMarginStart="@dimen/keyline1"
            app:layout_collapseMode="pin"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/add_customer_title"
            />
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/keyline1"
            android:orientation="vertical"
            >
            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/customer_add_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/customer_name_hint"
                app:met_floatingLabel="highlight"
                app:met_singleLineEllipsis="true"/>
            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/customer_add_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/customer_contact_hint"
                app:met_floatingLabel="highlight"
                app:met_singleLineEllipsis="true"
                android:inputType="number"/>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
    <android.support.v7.widget.ButtonBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:elevation="@dimen/app_bar_elevation">

        <Button
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:id="@+id/customer_add_save_action"
            android:text="@string/action_save"
            android:textColor="@color/cpb_white"
            android:textSize="16sp"
            />

        <Button
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:id="@+id/customer_add_cancel_action"
            android:text="@string/action_cancel"
            android:textColor="@color/cpb_white"
            android:textSize="16sp"/>
    </android.support.v7.widget.ButtonBarLayout>
</android.support.design.widget.CoordinatorLayout>