<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_formula_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.stark.formulizer.Activities.FormulaDetailsActivity"
    android:background="@drawable/bg_formuladetails">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="56dp"
        android:layout_marginBottom="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/keyline1"
                android:layout_marginEnd="@dimen/keyline1">
                <TextView
                    android:id="@+id/formula_details_owner_abbrivation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="41dp"
                    android:minWidth="40dp"
                    android:maxHeight="40dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/circle_blue"
                    android:gravity="center"
                    android:shadowColor="#9e9e9e"
                    android:shadowRadius="10"
                    android:text="A"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />
                <TextView
                    android:id="@+id/formula_details_owner_name"
                    android:layout_width="0dp"
                    android:layout_weight="0.6"
                    android:layout_height="wrap_content"
                    android:paddingEnd="16dp"
                    android:paddingStart="0dp"
                    android:layout_marginStart="72dp"
                    android:layout_marginEnd="16dp"
                    android:textColor="@android:color/white"
                    android:gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:text="Owner Name"
                    android:layout_margin="8dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/keyline1"
                android:layout_marginEnd="@dimen/keyline1">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.8"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:text="@string/label_formula"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="6dp"
                    android:padding="6dp"
                    android:id="@+id/textViewFormulaLable"
                    android:textColor="@android:color/white"/>
                <ImageButton
                    android:layout_width="37dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:layout_marginStart="@dimen/keyline1"
                    android:layout_marginEnd="@dimen/keyline1"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="6dp"
                    android:padding="6dp"
                    android:background="@drawable/ic_mode_edit_white_18dp"
                    android:backgroundTint="@color/colorAccent"
                    android:id="@+id/EditFormulaButton" />
            </LinearLayout>


            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/formula_details_table"
                android:layout_marginStart="@dimen/keyline1"
                android:layout_marginEnd="@dimen/keyline1">

            </TableLayout>
            <LinearLayout
                android:layout_marginStart="@dimen/keyline1"
                android:layout_marginEnd="@dimen/keyline1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:layout_width="0dp"
                    android:layout_weight="70"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:id="@+id/formula_details_addrow"
                    android:text="Add Row"
                    android:textColor="@color/cpb_white"/>
                <Button
                    android:layout_width="0dp"
                    android:layout_weight="30"
                    android:layout_height="wrap_content"
                    android:background="@color/colorAccent"
                    android:id="@+id/calculate"
                    android:text="@string/action_calculate"
                    android:textColor="@color/cpb_white"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/keyline1"
                android:layout_marginEnd="@dimen/keyline1"
                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.8"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:text="@string/formula_label_details"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="6dp"
                    android:padding="6dp"
                    android:textColor="@android:color/white"/>
                <ImageButton
                    android:layout_width="38dp"
                    android:layout_height="31dp"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:layout_marginStart="@dimen/keyline1"
                    android:layout_marginEnd="@dimen/keyline1"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="6dp"
                    android:padding="6dp"
                    android:background="@drawable/ic_mode_edit_white_18dp"
                    android:backgroundTint="@color/colorAccent"
                    android:id="@+id/EditDetailsButton" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/keyline1">
                <TextView
                    android:text="@string/formula_label_name"
                    android:layout_width="0dp"
                    android:layout_weight="0.3"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewName"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@android:color/white" />
                <com.rengwuxian.materialedittext.MaterialEditText
                    app:met_textColor="@drawable/edit_text_selector"
                    android:layout_width="0dp"
                    android:layout_weight="0.6"
                    android:layout_height="wrap_content"
                    android:id="@+id/formula_details_name"
                    android:hint="@string/formula_name_hint"
                    app:met_floatingLabel="highlight"
                    app:met_singleLineEllipsis="true"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/keyline1">
                <TextView
                    android:text="@string/formula_label_base"
                    android:layout_width="0dp"
                    android:layout_weight="0.3"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@android:color/white" />
                <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                    app:met_textColor="@drawable/edit_text_selector"
                    android:layout_width="0dp"
                    android:layout_weight="0.6"
                    android:layout_height="wrap_content"
                    android:id="@+id/formula_details_base"
                    android:hint="@string/formula_base_hint"
                    app:met_floatingLabel="highlight"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/keyline1">
                <TextView
                    android:text="@string/formula_label_company"
                    android:layout_width="0dp"
                    android:layout_weight="0.3"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@android:color/white" />
                <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                    app:met_textColor="@drawable/edit_text_selector"
                    android:layout_width="0dp"
                    android:layout_weight="0.6"
                    android:layout_height="wrap_content"
                    android:id="@+id/formula_details_company"
                    android:hint="@string/formula_company_hint"
                    app:met_floatingLabel="highlight"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/keyline1">
                <TextView
                    android:text="@string/formula_label_type"
                    android:layout_width="0dp"
                    android:layout_weight="0.3"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView6"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@android:color/white" />
                <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                    app:met_textColor="@drawable/edit_text_selector"
                    android:layout_width="0dp"
                    android:layout_weight="0.6"
                    android:layout_height="wrap_content"
                    android:id="@+id/formula_details_type"
                    android:hint="@string/formula_type_hint"
                    app:met_floatingLabel="highlight"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/keyline1"
                android:padding="6dp">

                <TextView
                    android:text="@string/formula_label_date"
                    android:layout_width="0dp"
                    android:layout_weight="0.3"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewDate"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@android:color/white" />

                <TextView
                    android:hint="@string/formula_date_hint"
                    android:textColor="@drawable/edit_text_selector"
                    android:layout_width="0dp"
                    android:layout_weight="0.6"
                    android:layout_height="wrap_content"
                    android:id="@+id/formula_details_date"
                    android:textSize="20sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/keyline1"
                android:padding="6dp">
                <TextView
                    android:text="@string/formula_label_access"
                    android:layout_width="0dp"
                    android:layout_weight="0.3"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewAccess"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@android:color/white" />
                <Switch
                    android:text="@string/formula_Private"
                    android:textColor="@drawable/edit_text_selector"
                    android:layout_width="0dp"
                    android:layout_weight="0.6"
                    android:layout_height="wrap_content"
                    android:id="@+id/formula_details_access"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginStart="@dimen/keyline1"
                android:padding="6dp">

                <TextView
                    android:text="Description :"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView5"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@android:color/white" />
                <com.rengwuxian.materialedittext.MaterialEditText
                    app:met_textColor="@drawable/edit_text_selector"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.27"
                    android:id="@+id/formula_details_desc"
                    android:inputType="textImeMultiLine"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <android.support.v7.widget.Toolbar
        android:id="@+id/formula_details_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:elevation="@dimen/app_bar_elevation"
        app:title="Formula Name"
        app:titleTextColor="@color/cpb_white"
        app:titleMarginStart="@dimen/keyline1"
        android:backgroundTint="#214054FF"
        />

    <android.support.v7.widget.ButtonBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:elevation="@dimen/app_bar_elevation">

        <Button
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:id="@+id/formula_details_save_action"
            android:text="@string/action_save"
            android:textColor="@color/cpb_white"
            android:textSize="16sp"
            />

        <Button
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:id="@+id/formula_details_delete_action"
            android:text="@string/action_delete"
            android:textColor="@color/cpb_white"
            android:textSize="16sp"/>
    </android.support.v7.widget.ButtonBarLayout>

</android.support.design.widget.CoordinatorLayout>
