<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_customer_formulas"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.stark.formulizer.Activities.CustomerFormulasActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/keyline1">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/customer_formulas_added_list_rv"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:scrollbars="vertical"/>
        <android.support.v7.widget.ButtonBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:elevation="@dimen/app_bar_elevation">

            <Button
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="30dp"
                android:background="@color/colorAccent"
                android:id="@+id/customer_formulas_clear_action"
                android:text="@string/action_clear"
                android:textColor="@color/cpb_white"
                android:textSize="16sp"
                />

            <Button
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="30dp"
                android:background="@color/colorPrimary"
                android:id="@+id/customer_formulas_save_action"
                android:text="@string/action_save"
                android:textColor="@color/cpb_white"
                android:textSize="16sp"/>
        </android.support.v7.widget.ButtonBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/customer_formulas_search_all"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:inputType="text"
                android:imeOptions="actionSearch"
                android:textColor="@color/ms_black"
                android:hint="@string/action_search_title"
                app:met_floatingLabel="highlight"
                />
        </LinearLayout>

    </LinearLayout>
    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/customer_formulas_add_rv_swipe"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp">
    <android.support.v7.widget.RecyclerView
        android:id="@+id/customer_formulas_add_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:scrollbars="vertical"
        />
    </android.support.v4.widget.SwipeRefreshLayout>

</android.support.design.widget.CoordinatorLayout>
